FLAIS-60 Implemented new create and delete logic.